Docker readme improvements (#33)